1.1.1 release

	* fix bug where file_completed_alert would not be posted unless file_progress
	  had been queries by the client
	* move files one-by-one when moving storage for a torrent
	* fix bug in enum_net() for BSD and Mac
	* fix bug in python binding of announce_entry
	* fixed bug related to flag_merge_resume_http_seeds flag in add_torrent_params
	* fixed inverted priority of incoming piece suggestions
	* optimize allow-fast logic
	* fix issue where FAST extension messages were not used during handshake
	* fixed crash on invalid input in http_parser
	* upgraded to libtommath 1.0
	* fixed parsing of IPv6 endpoint with invalid port character separator
	* added limited support for new x.pe parameter from BEP 9
	* fixed dht stats counters that weren't being updated
	* make sure add_torrent_alert is always posted before other alerts for
	  the torrent
	* fixed peer-class leak when settings per-torrent rate limits
	* added a new "preformatted" type to bencode entry variant type
	* improved Socks5 support and test coverage
	* fix set_settings in python binding
	* Added missing alert categories in python binding
	* Added dht_get_peers_reply_alert alert in python binding

1.1.0 release

	* improve robustness and performance of uTP PMTU discovery
	* fix duplicate ACK issue in uTP
	* support filtering which parts of session state are loaded by load_state()
	* deprecate support for adding torrents by HTTP URL
	* allow specifying which tracker to scrape in scrape_tracker
	* tracker response alerts from user initiated announces/scrapes are now
	  posted regardless of alert mask
	* improve DHT performance when changing external IP (primarily affects
	  bootstrapping).
	* add feature to stop torrents immediately after checking files is done
	* make all non-auto managed torrents exempt from queuing logic, including
	  checking torrents.
	* add option to not proxy tracker connections through proxy
	* removed sparse-regions feature