@@ -30,6 +30,7 @@ alias libtorrent-sims :
 	[ run test_optimistic_unchoke.cpp ]
 	[ run test_transfer.cpp ]
 	[ run test_http_connection.cpp ]
+	[ run test_web_seed.cpp ]
 	[ run test_auto_manage.cpp ]
 	[ run test_torrent_status.cpp ]
 	[ run test_swarm.cpp ]
